--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,5 +14,6 @@ RUN npm run build
 #production environment
 FROM nginx:stable-alpine
 COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
+COPY nginx.conf /etc/nginx/
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
