--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,5 +15,6 @@ RUN npm run build
 FROM nginx:stable-alpine
 COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/
+RUN apk update && apk add bash
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
